ISSUE-76 - components - Update, In http client replace key-value with map for all cases